added multiline entry for book info

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     <div id="allBooks">
         <div class="books"> Books</div>
+        <div class="content">test</div>
+        
     </div>
 
 </body>
