--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
 <body>
     <div class="header">The Library</div>
         <form id="addNewBook">
-        <input type="text" name= "title" id="title" placeholder="Enter the book title">
-        <input type="text" name= "author" id="author" placeholder="Who is the author?">
-        <input type="text" name= "pageN" id="pageN" placeholder="How many pages is the book?">
+        <input type="text" class= "bookinfo" name="title" id="title" placeholder="Enter the book title">
+        <input type="text" class= "bookinfo" name="author" id="author" placeholder="Who is the author?">
+        <input type="text" class= "bookinfo" name="pageN" id="pageN" placeholder="How many pages is the book?">
         <div class="checkBox">
             <div>Have you read this book?</div>
             <input type="checkbox" name="readbox" id="readbox" placeholder="Have you read this book?">
         </div>
     </form>
     <button id="addBookPrompt" onclick="newBook(a, b, c, d)"> Add a Book </button>
-
     <div id="allBooks">
         <div class="books"> Books</div>
         <div class="content">test</div>
-        
+
     </div>
 
 </body>
