added checkbox read/notread function

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input type="checkbox" name="readbox" id="readbox" placeholder="Have you read this book?">
         </div>
     </form>
-    <button id="addBookPrompt" onclick="newBook(a, b, c, d)"> Add a Book </button>
+    <button id="addBookPrompt" onclick="newBook()"> Add a Book </button>
     <div id="allBooks">
         <div class="books"> Books</div>
         <div class="content">test</div>
