--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <input type="text" class= "bookinfo" name="author" id="author" placeholder="Who is the author?">
         <input type="text" class= "bookinfo" name="pageN" id="pageN" placeholder="How many pages is the book?">
         <div class="checkBox">
-            <div>Have you read this book?</div>
+
             <input type="checkbox" name="readbox" id="readbox" placeholder="Have you read this book?">
+            <label class="checkboxtext" for="readbox">Have you read this book?</label>
         </div>
     </form>
     <button id="addBookPrompt" onclick="newBook()"> Add a Book </button>
     <div id="allBooks">
         <div class="books"> Books</div>
         <div class="content">test</div>
-
     </div>
 
 </body>
